# pyduino

./: README.md  README.txt  arduino_transpile.py  build.bat  cli.py  main.ino  main.py  pyproject.toml
main/: main.ino
pyduino/: cli.py
