[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyduino"
version = "0.0.1"
description = "Python transpiler and uploader for Arduino sketches (For Windows only)"
authors = [{name="Soumalya Das"}]
readme = "README.txt"
requires-python = ">=3.11"
dependencies = ["rich", "clang"]

[project.scripts]
pyduino = "pyduino.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["pyduino"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pyduino*"]

[tool.setuptools.package-data]
pyduino = [
    "lib/*",
    "deps/*",
    "*.py"
]

[tool.hatch.build.metadata]
include = ["lib/*", "deps/*", "*.py", "*.txt"]
